@@ -1,3 +1,4 @@
+2019-01-18 - gucpani - Implemented cycles to extend the addition of lines to all systems.
 2019-01-17 - gcupani - Implemented addition of lines to systems, to improve fit.
 2019-01-16 - gcupani - Fixed bug that prevented systems to be plotted at the right redshift.
 2019-01-16 - gcupani - Fixed bug that prevented fitting when lines where loaded
